- configuration de lombok et mapstruct